# gravvits

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-and-deploy.yml  ci-cd.yml  deploy.yml  lint-python.yml
app/src/: main.py
