[tool.poetry]
name = "gravvits"
version = "0.1.0"
description = ""
authors = ["mremule <https://github.com/mremule>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["standard"], version = "^0.115.5" }
sqlalchemy = "^2.0.36"
uvicorn = "^0.32.0"

[tool.poetry.dev-dependencies]
black = "^24.10.0"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
